--- a/index.html
+++ b/index.html
@@ -3,137 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de Produção de OP</title>
+    <title>Controle de Produção</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        h1 {
-            color: #333;
-        }
-        .input-group {
-            margin-bottom: 10px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input[type="number"],
-        input[type="text"],
-        select {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-        button {
-            padding: 10px 20px;
-            color: white;
-            border: none;
-            cursor: pointer;
-            margin-right: 5px;
-            margin-top: 10px;
-        }
-        .machine-btn {
-            width: 150px;
-            height: 50px;
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-        .machine-buttons {
-            display: flex;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-        .active {
-            background-color: red;
-        }
-        .inactive {
-            background-color: green;
-        }
-        .calc-btn {
-            background-color: #4CAF50;
-        }
-        .calc-btn:hover {
-            background-color: #45a049;
-        }
-        .result {
-            margin-top: 20px;
-            font-weight: bold;
-        }
         table {
-            margin-top: 20px;
             width: 100%;
             border-collapse: collapse;
         }
-        table, th, td {
-            border: 1px solid #ddd;
+        th, td {
+            border: 1px solid #000;
             padding: 8px;
             text-align: left;
         }
         th {
             background-color: #f2f2f2;
         }
-        h2 {
-            margin-top: 30px;
-        }
     </style>
 </head>
 <body>
     <h1>Controle de Produção</h1>
 
-    <div class="machine-buttons">
-        <button id="machine1" class="machine-btn inactive" onclick="toggleMachine(1)">CL-01</button>
-        <button id="machine2" class="machine-btn inactive" onclick="toggleMachine(2)">CL-02</button>
-        <button id="machine3" class="machine-btn inactive" onclick="toggleMachine(3)">CL-03</button>
-    </div>
-
     <form id="productionForm">
-        <div class="input-group">
-            <label for="opNumber">Número da OP:</label>
-            <input type="text" id="opNumber" maxlength="13" oninput="formatOPNumber(this)" required>
-        </div>
-        <div class="input-group">
-            <label for="componentCode">Código do Componente:</label>
-            <input type="text" id="componentCode" required>
-        </div>
-        <div class="input-group">
-            <label for="opQuantity">Quantidade da OP:</label>
-            <input type="number" id="opQuantity" min="0" required>
-        </div>
-        <div class="input-group">
-            <label for="opLength">Comprimento da OP (cm):</label>
-            <input type="number" id="opLength" min="0" required>
-        </div>
-        <div class="input-group">
-            <label for="fabricType">Tipo de Tecido:</label>
-            <select id="fabricType" required>
-                <option value="">Selecione</option>
-                <option value="Plano">Plano</option>
-                <option value="Tubular">Tubular</option>
-                <option value="PET">PET</option>
-            </select>
-        </div>
-        <div class="input-group">
-            <label for="opWeight">Gramatura da OP:</label>
-            <input type="number" id="opWeight" min="0" required>
-        </div>
-        <div class="input-group">
-            <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
-            <input type="number" id="piecesRemoved" min="0" required>
-        </div>
-        <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular e Salvar</button>
+        <label for="fabricType">Tipo de Tecido:</label>
+        <select id="fabricType" required>
+            <option value="plano">Plano</option>
+            <option value="tubular">Tubular</option>
+            <option value="PET">PET</option>
+        </select>
+
+        <label for="gramatura">Gramatura:</label>
+        <input type="number" id="gramatura" required>
+
+        <label for="opNumber">Número da OP:</label>
+        <input type="text" id="opNumber" required>
+
+        <label for="componentCode">Código do Componente:</label>
+        <input type="text" id="componentCode" required>
+
+        <label for="opQuantity">Quantidade da OP:</label>
+        <input type="number" id="opQuantity" required>
+
+        <label for="opLength">Comprimento da OP:</label>
+        <input type="number" id="opLength" required>
+
+        <label for="opWeight">Gramatura da OP:</label>
+        <input type="number" id="opWeight" required>
+
+        <label for="piecesRemoved">Quantidade de Peças Retiradas:</label>
+        <input type="number" id="piecesRemoved" required>
+
+        <button type="button" onclick="calculate()">Calcular</button>
     </form>
 
-    <h2>Resultados:</h2>
-    <p id="cutsResult">Número de Cortes: </p>
-    <p id="turnsResult">Número de Voltas: </p>
-    <p id="cutAmountResult">Quantidade Cortada: </p>
-    <p id="totalCutAmountResult">Quantidade Total Cortada: </p>
-    <p id="cyclesResult">Número de Ciclos: </p>
-    <p id="remainingTurnsResult">Restante de Voltas para Fechar a OP: </p>
+    <div>
+        <h2>Resultados</h2>
+        <p id="numTurnsResult"></p>
+        <p id="remainingTurnsResult"></p>
+        <p id="totalCutAmountResult"></p>
+    </div>
 
+    <h2>Registros</h2>
     <table id="recordsTable">
         <thead>
             <tr>
@@ -148,84 +76,45 @@
                 <th>Quantidade de Peças Retiradas</th>
             </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+            <!-- Registros serão inseridos aqui -->
+        </tbody>
     </table>
 
-    <button onclick="downloadCSV()">Download CSV</button>
+    <button onclick="downloadCSV()">Baixar CSV</button>
 
     <script>
         let records = [];
 
-        function toggleMachine(machineNumber) {
-            const button = document.getElementById(`machine${machineNumber}`);
-            if (button.classList.contains('inactive')) {
-                button.classList.remove('inactive');
-                button.classList.add('active');
-            } else {
-                button.classList.remove('active');
-                button.classList.add('inactive');
-            }
-        }
-
-        function getActiveMachinesCount() {
-            let count = 0;
-            const machineButtons = document.getElementsByClassName('machine-btn');
-            for (let button of machineButtons) {
-                if (button.classList.contains('active')) {
-                    count++;
-                }
-            }
-            return count;
-        }
-
-        function formatOPNumber(input) {
-            let value = input.value.replace(/\D/g, '');
-            if (value.length > 3) value = value.substring(0, 3) + '.' + value.substring(3);
-            if (value.length > 7) value = value.substring(0, 7) + '/' + value.substring(7);
-            if (value.length > 10) value = value.substring(0, 10) + '.' + value.substring(10);
-            input.value = value;
-        }
-
-        function calculateAndSave() {
+        function calculate() {
+            const fabricType = document.getElementById('fabricType').value;
+            const gramatura = parseFloat(document.getElementById('gramatura').value);
             const opNumber = document.getElementById('opNumber').value;
             const componentCode = document.getElementById('componentCode').value;
-            const opQuantity = parseFloat(document.getElementById('opQuantity').value);
+            const opQuantity = parseInt(document.getElementById('opQuantity').value);
             const opLength = parseFloat(document.getElementById('opLength').value);
-            const fabricType = document.getElementById('fabricType').value;
             const opWeight = parseFloat(document.getElementById('opWeight').value);
-            const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value) || 0;
+            const piecesRemoved = parseInt(document.getElementById('piecesRemoved').value);
 
-            if (!opNumber || !componentCode || isNaN(opQuantity) || isNaN(opLength) || !fabricType || isNaN(opWeight)) {
-                alert('Por favor, preencha todos os campos corretamente.');
-                return;
-            }
+            let maxTurns;
 
-            const maxCarouselLength = 540;
-
-            // Cálculo do Número de Cortes
-            const numCuts = Math.floor(maxCarouselLength / opLength);
-            document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
-
-            // Cálculo do Número de Voltas
-            let numTurns = 0;
-
-            if (fabricType === 'Plano') {
-                numTurns = calculateTurnsPlano(opWeight);
-            } else if (fabricType === 'Tubular') {
-                numTurns = calculateTurnsTubular(opWeight);
+            // Definindo o número máximo de voltas com base no tipo de tecido e gramatura
+            if (fabricType === 'plano') {
+                maxTurns = 80 * (65 / gramatura);
+            } else if (fabricType === 'tubular') {
+                maxTurns = 45 * (65 / gramatura);
             } else if (fabricType === 'PET') {
-                numTurns = 25; // Valor fixo para PET
+                maxTurns = 25;
             }
 
-            document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
+            const numTurns = Math.min(maxTurns, Math.floor(7000 / opWeight)); // Supondo um cálculo baseado em peso
 
-            // Cálculo da Quantidade Cortada
-            const cutAmount = numCuts * numTurns;
-            document.getElementById('cutAmountResult').textContent = `Quantidade Cortada: ${cutAmount}`;
+            document.getElementById('numTurnsResult').textContent = `Número de Voltas: ${numTurns}`;
 
-            // Cálculo do Número de Ciclos (mantendo a fórmula original)
-            const numCycles = opQuantity / cutAmount; // Fórmula original
-            document.getElementById('cyclesResult').textContent = `Número de Ciclos: ${numCycles}`;
+            // Cálculo do número de ciclos
+            const cutAmount = opQuantity * opLength; // Cálculo da quantidade cortada
+            const numCycles = cutAmount / numTurns;
+            document.getElementById('remainingTurnsResult').textContent = `Número de Ciclos: ${numCycles}`;
 
             // Cálculo do Restante de Voltas para Fechar a OP
             const fractionalPart = numCycles - Math.floor(numCycles); // Parte decimal
@@ -234,7 +123,7 @@
             document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
 
             // Cálculo da Quantidade Total Cortada
-            const totalCutAmount = ((numTurns * Math.floor(numCycles) + remainingTurns) * numCuts);
+            const totalCutAmount = ((numTurns * Math.floor(numCycles) + remainingTurns) * cutAmount);
             document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
 
             const activeMachines = getActiveMachinesCount();
@@ -254,12 +143,9 @@
             updateRecordsTable();
         }
 
-        function calculateTurnsPlano(weight) {
-            return Math.floor(7000 / weight);
-        }
-
-        function calculateTurnsTubular(weight) {
-            return Math.floor(6800 / weight);
+        function getActiveMachinesCount() {
+            // Função fictícia para retornar o número de máquinas ativas
+            return Math.floor(Math.random() * 10) + 1; // Exemplo: retorna um número aleatório de 1 a 10
         }
 
         function updateRecordsTable() {
