--- a/index.html
+++ b/index.html
@@ -207,15 +207,7 @@
             document.getElementById('cutsResult').textContent = `Número de Cortes: ${numCuts}`;
 
             // Cálculo do Número de Voltas
-            let numTurns = 0;
-
-            if (fabricType === 'Plano') {
-                numTurns = calculateTurnsPlano(opWeight);
-            } else if (fabricType === 'Tubular') {
-                numTurns = calculateTurnsTubular(opWeight);
-            } else if (fabricType === 'PET') {
-                numTurns = 25; // Valor fixo para PET
-            }
+            let numTurns = calculateTurns(fabricType, opWeight);
 
             document.getElementById('turnsResult').textContent = `Número de Voltas: ${numTurns}`;
 
@@ -234,64 +226,98 @@
             document.getElementById('remainingTurnsResult').textContent = `Restante de Voltas para Fechar a OP: ${remainingTurns}`;
 
             // Cálculo da Quantidade Total Cortada
-            const totalCutAmount = ((numTurns * Math.floor(numCycles) + remainingTurns) * numCuts);
+            const totalCutAmount = ((numTurns * Math.floor(numCuts)) + piecesRemoved);
             document.getElementById('totalCutAmountResult').textContent = `Quantidade Total Cortada: ${totalCutAmount}`;
 
+            // Registro dos dados
+            const dateTime = new Date().toLocaleString();
             const activeMachines = getActiveMachinesCount();
-            const record = {
-                timestamp: new Date().toLocaleString(),
-                activeMachines,
-                opNumber,
-                componentCode,
-                opQuantity,
-                opLength,
-                fabricType,
-                opWeight,
-                piecesRemoved
-            };
-
-            records.push(record);
+            records.push({ dateTime, activeMachines, opNumber, componentCode, opQuantity, opLength, fabricType, opWeight, piecesRemoved });
             updateRecordsTable();
         }
 
-        function calculateTurnsPlano(weight) {
-            return Math.floor(7000 / weight);
-        }
-
-        function calculateTurnsTubular(weight) {
-            return Math.floor(6800 / weight);
+        function calculateTurns(fabricType, opWeight) {
+            let turns = 0;
+            switch (fabricType) {
+                case 'Plano':
+                    if (opWeight <= 100) {
+                        turns = 2;
+                    } else if (opWeight > 100 && opWeight <= 200) {
+                        turns = 3;
+                    } else if (opWeight > 200 && opWeight <= 300) {
+                        turns = 4;
+                    } else if (opWeight > 300 && opWeight <= 400) {
+                        turns = 5;
+                    } else {
+                        turns = 6; // Para gramaturas acima de 400g
+                    }
+                    break;
+                case 'Tubular':
+                    if (opWeight <= 100) {
+                        turns = 3;
+                    } else if (opWeight > 100 && opWeight <= 200) {
+                        turns = 4;
+                    } else if (opWeight > 200 && opWeight <= 300) {
+                        turns = 5;
+                    } else if (opWeight > 300 && opWeight <= 400) {
+                        turns = 6;
+                    } else {
+                        turns = 7; // Para gramaturas acima de 400g
+                    }
+                    break;
+                case 'PET':
+                    if (opWeight <= 100) {
+                        turns = 4;
+                    } else if (opWeight > 100 && opWeight <= 200) {
+                        turns = 5;
+                    } else if (opWeight > 200 && opWeight <= 300) {
+                        turns = 6;
+                    } else if (opWeight > 300 && opWeight <= 400) {
+                        turns = 7;
+                    } else {
+                        turns = 8; // Para gramaturas acima de 400g
+                    }
+                    break;
+                default:
+                    turns = 0; // Caso não reconheça o tipo de tecido
+            }
+            return turns;
         }
 
         function updateRecordsTable() {
-            const tableBody = document.querySelector('#recordsTable tbody');
-            tableBody.innerHTML = '';
-
+            const tbody = document.getElementById('recordsTable').querySelector('tbody');
+            tbody.innerHTML = '';
             records.forEach(record => {
                 const row = document.createElement('tr');
-                for (let key in record) {
-                    const cell = document.createElement('td');
-                    cell.textContent = record[key];
-                    row.appendChild(cell);
-                }
-                tableBody.appendChild(row);
+                row.innerHTML = `
+                    <td>${record.dateTime}</td>
+                    <td>${record.activeMachines}</td>
+                    <td>${record.opNumber}</td>
+                    <td>${record.componentCode}</td>
+                    <td>${record.opQuantity}</td>
+                    <td>${record.opLength}</td>
+                    <td>${record.fabricType}</td>
+                    <td>${record.opWeight}</td>
+                    <td>${record.piecesRemoved}</td>
+                `;
+                tbody.appendChild(row);
             });
         }
 
         function downloadCSV() {
-            let csvContent = "data:text/csv;charset=utf-8,";
-            csvContent += "Data e Hora,Máquinas Ativas,Número da OP,Código do Componente,Quantidade da OP,Comprimento da OP,Tipo de Tecido,Gramatura da OP,Quantidade de Peças Retiradas\n";
-
+            let csv = 'Data e Hora, Máquinas Ativas, Número da OP, Código do Componente, Quantidade da OP, Comprimento da OP, Tipo de Tecido, Gramatura da OP, Quantidade de Peças Retiradas\n';
             records.forEach(record => {
-                const row = Object.values(record).join(',');
-                csvContent += row + "\n";
+                csv += `${record.dateTime}, ${record.activeMachines}, ${record.opNumber}, ${record.componentCode}, ${record.opQuantity}, ${record.opLength}, ${record.fabricType}, ${record.opWeight}, ${record.piecesRemoved}\n`;
             });
 
-            const encodedUri = encodeURI(csvContent);
-            const link = document.createElement("a");
-            link.setAttribute("href", encodedUri);
-            link.setAttribute("download", "controle_producao.csv");
-            document.body.appendChild(link);
-            link.click();
+            const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.setAttribute('download', 'registros_producao.csv');
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
         }
     </script>
 </body>
